--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "author": "Mike Chernobrov <m.chernobrov@rambler-co.ru> (http://rambler-co.ru)",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery-form-styler": "^2.0.1",
+    "jquery-validation": "^1.17.0"
   },
   "eslintConfig": {
     "env": {
